Apply Timeline Jekyll Theme

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: CubeTree Marketplace
+title:
 ---
 
-<h1>Coming Soon</h1>
+<h1>Index Section</h1>
+<p>Testing new theme</p>
