--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@ layout: default
 title:
 ---
 
-<h1>Index Section</h1>
-<p>Testing new theme</p>
+Managing Relationships to Ensure Success in partnerships by building and executing a strong
+strategy that drives focus on the core capabilities that add real value to customers and ensure
+Sustainability, Savings and Success.
