--- a/contact.html
+++ b/contact.html
@@ -4,16 +4,11 @@ section-type: contact
 title: Contact
 email: email@domain.com
 
-# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, linkedin)
 social:
-- title: adn
-url: https://alpha.app.net/kirbyt
-- title: twitter
+- title: linkedin
 url: http://twitter.com/kirbyt
-- title: github
-url: http://github.com/kirbyt
 ---
-## Contact
+## Get in touch
 
 Send me an email if you would like to get in touch, hire me for your next project, have questions or feedback on my
 apps, or just want to say hello.
