--- a/team.html
+++ b/team.html
@@ -1,16 +1,11 @@
 ---
 layout: null
 section-type: default
-title: About
+title: Team
 ---
-## About Us
+## Our Team
 
 Lorem ipsum dolor sit amet, eam sint magna vivendo ex, et intellegam delicatissimi usu. Purto corpora adipisci eos cu,
-qui quaestio vulputate ei, an dico dicant eruditi eum. Ut omnium commodo eligendi duo, eu minim consul delicatissimi
-vim. Te sit errem docendi, saepe expetenda delicatissimi eum et. Ex pri cetero blandit scriptorem, et mel libris
-tamquam. Lorem ipsum dolor sit amet, eam sint magna vivendo ex, et intellegam delicatissimi usu. Purto corpora adipisci
-eos cu. Lorem ipsum dolor sit amet, eam sint magna vivendo ex, et intellegam delicatissimi usu. Purto corpora adipisci
-eos cu,
 qui quaestio vulputate ei, an dico dicant eruditi eum. Ut omnium commodo eligendi duo, eu minim consul delicatissimi
 vim. Te sit errem docendi, saepe expetenda delicatissimi eum et. Ex pri cetero blandit scriptorem, et mel libris
 tamquam. Lorem ipsum dolor sit amet, eam sint magna vivendo ex, et intellegam delicatissimi usu. Purto corpora adipisci
