Create hero section

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title:
+<!-- section-position: 0 -->
 ---
 
-Managing Relationships to Ensure Success in partnerships by building and executing a strong
-strategy that drives focus on the core capabilities that add real value to customers and ensure
-Sustainability, Savings and Success.
+Ensuring success in partnerships by building and executing a strong strategy that drives focus on the core capabilities
+that add real value to customers and ensure Sustainability, Savings and Success.
