--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 ---
 layout: default
-title:
-<!-- section-position: 0 -->
+title: 'home'
 ---
 
-Ensuring success in partnerships by building and executing a strong strategy that drives focus on the core capabilities
-that add real value to customers and ensure Sustainability, Savings and Success.
+{% include homeNavigation.html %}
+
+{% include sections/hero.html %}
+
+{% include sections/about.html %}
+
+
+<section id="clients" class="container py-4 py-lg-5 content-section">
+    <h2>Clients</h2>
+</section>
+
+<section id="team" class="container py-4 py-lg-5 content-section">
+    <h2>Team</h2>
+</section>
+
+<section id="contact" class="container py-4 py-lg-5 content-section">
+    <h2>Contact</h2>
+</section>
