--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'home'
+title: ''
 ---
 
 {% include homeNavigation.html %}
@@ -9,15 +9,12 @@ title: 'home'
 
 {% include sections/about.html %}
 
-
-<section id="clients" class="container py-4 py-lg-5 content-section">
+<!-- <section id="clients" class="container py-4 py-lg-5 content-section">
     <h2>Clients</h2>
 </section>
 
 <section id="team" class="container py-4 py-lg-5 content-section">
     <h2>Team</h2>
-</section>
+</section> -->
 
-<section id="contact" class="container py-4 py-lg-5 content-section">
-    <h2>Contact</h2>
-</section>
+{% include sections/contact.html %}
