Add Arboreal section

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@ title: ''
 
 {% include sections/hero.html %}
 
+{% include sections/clients.html %}
+
 {% include sections/about.html %}
 
-<!-- <section id="clients" class="container py-4 py-lg-5 content-section">
-    <h2>Clients</h2>
-</section>
-
-<section id="team" class="container py-4 py-lg-5 content-section">
+<!-- <section id="team" class="container py-4 py-lg-5 content-section">
     <h2>Team</h2>
 </section> -->
 
