Replace Client with Partner

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: ''
 
 {% include sections/hero.html %}
 
-{% include sections/clients.html %}
+{% include sections/partners.html %}
 
 {% include sections/about.html %}
 
